2012-12-07  Aldy Hernandez  <aldyh@redhat.com>

	PR c++/55513
	* semantics.c (cxx_eval_builtin_function_call): Set non_constant_p
	after folding.

2012-12-07  Paolo Carlini  <paolo.carlini@oracle.com>

	* tree.c (build_aggr_init_expr): Remove tsubst_flags_t parameter.
	(build_cplus_new): Adjust.
	* cp-tree.h: Adjust declaration.
	* init.c (build_value_init): Adjust.

2012-12-07  Dodji Seketeli  <dodji@redhat.com>

	PR c++/54401
	* parser.c (cp_parser_alias_declaration): Commit to tentative
	parse when see the '=' token.  Get out if the type-id is invalid.
	Update function comment.
	(cp_parser_member_declaration): Don't try to parse a using
	declaration if we know that we expected an alias declaration; that
	is, if we see the '=' token after the identifier.

2012-12-06  Jason Merrill  <jason@redhat.com>

	PR c++/54325
	* tree.c (build_aggr_init_expr): Don't check for abstract class.
	(build_cplus_new): Check here instead.

	PR c++/55058
	* pt.c (tsubst): Keep the quals when looking through a typedef.

	PR c++/55249
	* tree.c (build_vec_init_elt): Use the type of the initializer.

	PR c++/54744
	* pt.c (resolve_typename_type): Check TYPENAME_IS_RESOLVING_P on scope.
	* init.c (expand_member_init): Check for being in a template first.
	* parser.c (cp_parser_mem_initializer_list): Only check class types
	for equivalence to the current class.

	PR c++/54913
	* semantics.c (finish_qualified_id_expr): convert_from_reference
	after building a SCOPE_REF.

2012-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR c++/54207
	* except.c (build_noexcept_spec): Avoid direct comparison
	with boolean_true_node or boolean_false_node, instead use
	operand_equal_p and/or INTEGER_CST check.
	* pt.c (tsubst_exception_specification): Likewise.
	* typeck2.c (merge_exception_specifiers): Likewise.

2012-12-06  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/55573
	* semantics.c (adjust_temp_type): Handle VECTOR_CST.

2012-12-06  Jason Merrill  <jason@redhat.com>

	PR c++/54947