@@ -1,3 +1,8 @@
+2012-12-07  Jason Merrill  <jason@redhat.com>
+
+	PR c++/55419
+	* tree.c (build_target_expr): Don't set TREE_CONSTANT.
+
 2012-12-07  Aldy Hernandez  <aldyh@redhat.com>
 
 	PR c++/55513
